[build-system]
requires = ["setuptools>=80.9.0", "Cython>=3.2.4", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "loxwebsocket"
version = "0.5.2"
description = "A Python library for connecting to Loxone Smart Home systems via WebSocket"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Jakob Gliwa", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["loxone", "websocket", "smart-home", "automation"]
dependencies = [
    "aiohttp>=3.13.3",
    "orjson>=3.11.5",
    "pycryptodome>=3.23.0",
    "construct>=2.10.70",
    "py-cpuinfo>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0"
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.15.20",
]
build = [
    "setuptools>=80.9.0", 
    "Cython>=3.2.4",
    "wheel>=0.45.1"
]

[project.urls]
Homepage = "https://github.com/yourusername/loxwebsocket"
Documentation = "https://github.com/yourusername/loxwebsocket#readme"
Repository = "https://github.com/yourusername/loxwebsocket.git"
Issues = "https://github.com/yourusername/loxwebsocket/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["loxwebsocket*"]

[tool.setuptools.package-data]
"loxwebsocket.cython_modules" = ["*.pxd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=loxwebsocket --cov-report=term-missing"
asyncio_mode = "strict"

[tool.uv]
native-tls = true

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src"]
extend-exclude = ["*.pyx", "*.pxd"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (undefined names, unused imports/vars)
    "I",      # isort (import ordering)
    "B",      # flake8-bugbear (common bugs & anti-patterns)
    "ASYNC",  # flake8-async (asyncio pitfalls)
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["loxwebsocket"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are expected in package inits
"examples/*" = ["T20"]     # prints are fine in examples